  Changes:
    - Revised tint handling, separated transport belt tints into their own table, `reskins.lib.belt_tint_index`
    - Revised how tints are indexed, allowing for direct reference by tier-number instead of a string
    - No longer requires Factorio Library as a dependency as the functions are no longer used by this mod
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021.01.31
  Locale:
    - Added Russian localization
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020.12.25
  Features:
    - Added function `vertical_pipe_shadow` to place shadows at appropriate tile locations for pipes
    - Added item icon for solder and silicon wafer, credit to Vigil for the sprites
    - Added function `technology_equipment_overlay` for technology icons
    - Now requires Factorio Library as a dependency
  Changes:
    - Adjusted the default color blue for tier 3 to better match the vanilla fast inserter
    - Revised function `create_explosions_and_particles' such that `inputs.particles` is optional
    - Equipment technology icons now align with Bob's mods and vanilla Factorio's overlay
  Bugfixes:
    - Fixed that inserting an equipment background into a single-layer icon did not properly transcribe the single-layer icon to an icons definition
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020.11.26
  Features:
    - Moved to Factorio 1.1
    - Added a catch-all to ensure nuclear reactors working light is properly defined for Angels or Bobs
  Changes:
    - Added transcription of `draw_as_light` and `draw_as_glow` fields to `make_4way_animation_from_spritesheet`
    - Added support for progression-based tier coloring for the oil refinery when playing with pure Angel's mods