@@ -7,6 +7,8 @@ Date: 2021.02.XX
     - Revised tint handling, separated transport belt tints into their own table, `reskins.lib.belt_tint_index`
     - Revised how tints are indexed, allowing for direct reference by tier-number instead of a string
     - No longer requires Factorio Library as a dependency as the functions are no longer used by this mod
+  Bugfixes:
+    - Fixed that the concatenation routine to append the defaults for boolean settings did not handle LocalisedStrings properly
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2021.01.31
